text: Add notes on OnClass algorithm

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,3 +1,4 @@
+Computational methods for the integrative analysis of single-cell data 
 
 # Articles to read 
 
@@ -12,18 +13,12 @@ Neves M, Damaschun A, Mah N, Lekschas F, Seltmann S, Stachelscheid H, Fontaine J
 
 https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-18-supplement-17
 
-
-
-CLO: The cell line ontology
-
 Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
 
 In 1957, C.H. Waddington proposed a powerful metaphor for how differentiated cell types emerge from a single, totipotent cell (Waddington 1957). T
 
-Searching large-scale scRNA-seq databases via unbiased cell embedding with Cell BLAST
 
 
-Unifying single-cell annotations based on the Cell Ontology
 
 Cell type nomenclature for the mammalian brain: Development and application of a systematic, extensible convention
 
