--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -635,8 +635,18 @@ The recent development of the Cell Culture Ontology
 (CCONT) has resulted in an ontology with overlapping cell line information to CLO [20].
 
 
-### Comments
+### Comment
 
+# Template 
+
+
+## Title
+[citation]
+### Highlights
+
+
+
+### Comments
 # General Ontology-related
 
 ## Formalization of taxon-based constraints to detect inconsistencies in annotation and ontology development
