text: Add notes on cell type namings based on the Allen paper

--- a/content/04.concepts.md
+++ b/content/04.concepts.md
@@ -68,7 +68,22 @@ Given the neuron identity-defining properties, I proposed to call these transcri
 
 In such cases it is possible to compare if the predicted cell type matches the ‘biological’ cell type. We identified 17 independent datasets with homogeneous cell-type populations, where the biological cell type has been reported (this
 
-## species-neutral cell types
+ species-neutral cell types
 
 ## An improved ontological representation of dendritic cells as a paradigm for all cell types
 [@doi:10.1186/1471-2105-10-70]
+
+## Cell type nomenclature for the mammalian brain: Development and application of a systematic, extensible convention
+    [@arxiv:2006.05406]
+
+    - Provisional cell type: Quantitatively-derived data cluster defined within a tax- onomy. Sometimes called “cell type” here for simplicity
+    - Cell set accession ID: A unique ID across all tracked datasets and taxonomies. This tag labels the taxonomy and numbers each cell type. [taxonomy id][unique # within taxonomy] -CS1910121201
+    - Cell set alias: Any cell set descriptor (e.g., what cell types are called in a paper). It can be defined computationally based on the data, or manually based on prior knowledge or new experiments, or a combination of both:
+        -ADARB2 (CGE) 
+        -Inh L1-2 PAX6 CDH12
+        -Chandelier
+    - Cell set label: An ID unique within a single taxonomy that contains a biological term that ideally is included in a relevant cell ontology. In some cases, it may be redundant with accession ID. [Canonical cell type][unique # within canonical cell type] -Neuron 12 
+    - Cell set preferred alias:  Analogous to “gene symbol”. At most one biologically- driven name for linking matching cell sets across taxonomies and with a reference taxonomy. 
+        -L2/3 IT 4
+        -Pvalb 3 
+        -Microglia 2
