--- a/content/15.species.md
+++ b/content/15.species.md
@@ -224,6 +224,12 @@ Selecting the characters necessary to give a goodidea ofa species in a short des
 
 Taxonomic characters, as you recall from chapter 3, are all the features of an taxon by which its members actually or potentially differ from those of another taxon
 
+Care should be taken to include the pertinent aspects of the organism’s life history. For example, for organisms with two sexes, both should be described. If differences are complex, this can be done by describing each sex differently, as in this description of a new species of cumacean crustacean, Oxyurostylis lecroyae.
+
+Like any good description, a taxonomic description works from the familiar or more general to the specific (what Mayr called following the natural order).
+
+If the diagnosis has been given in Latin, the description section does not have to be written in Latin, although some botanical taxonomists recommend it.
+
 
 ### Comments
 Figure 1.1 New equipment and new habitats yield new species.
