--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,10 +1,40 @@
+
+Gillespie TH, Tripathy S, Sy FM, Martone ME, Hill SL. 2019. A FAIR Knowledge Model for Classifying Neuronal Types. Neuroinformatics. doi:10.12751/incf.ni2019.0001
+
+Rozenblatt-Rosen O, Stubbington MJT, Regev A, Teichmann SA. 2017. The Human Cell Atlas: from vision to reality. Nature 550:451–453. doi:10.1038/550451a
+
 Computational methods for the integrative analysis of single-cell data 
+
+Evolution of cellular diversity in primary motor cortex of human, marmoset monkey, and mouse. bioRxiv. doi:10.1101/2020.03.31.016972
+
+Batiuk MY. 2020. Identification of region-specific astrocyte subtypes at single cell resolution. Nat Commun 11:1220. doi:10.1038/s41467-019-14198-8
+
+Fuzik J, Z. 2016. Integration of electrophysiological recordings with single-cell RNA-seq data identifies neuronal subtypes. Nat Biotechnol 34:175–183. doi:10.1038/nbt.3443
+
+Gala R, 2019. A coupled autoencoder approach for multi-modal analysis of cell types In: Wallach H, Larochelle H, Beygelzimer A, d\textquotesingle Alché-Buc F, Fox E, Garnett R, editors. Advances in Neural Information Processing Systems 32. Curran Associates, Inc. pp. 9267–9276.
+
+Geirsdottir L, Cross-Species Single-Cell Analysis Reveals Divergence of the Primate Microglia Program. Cell 179:1609–1622.e16. doi:10.1016/j.cell.2019.11.010
+
+Haendel MA,  2014. Unification of multi-species vertebrate anatomy ontologies for comparative biology in Uberon. J Biomed Semantics 5:21. doi:10.1186/2041-1480-5-21
+
+Hodge RD, 2019. Conserved cell types with divergent features in human versus mouse cortex. Nature 573:61–68. doi:10.1038/s41586-019-1506-7
+
+Kotliar D 2019. Identifying gene expression programs of cell-type identity and cellular activity with single-cell RNA-Seq. Elife 8:e43803. doi:10.7554/eLife.43803
+
+Yao Z,  2020b. A taxonomy of transcriptomic cell types across the isocortex and hippocampal formation. bioRxiv. doi:10.1101/2020.03.30.015214
+A community-based transcriptomics classification and nomenclature of neocortical cell types. arXiv [q-bioGN].
+
+Zeng H, Sanes JR. 2017. Neuronal cell-type classification: challenges, opportunities and the path forward. Nat Rev Neurosci 18:530–546. doi:10.1038/nrn.2017.85
+
 
 # Articles to read 
 
 ## Describing Species - Judith Winston
 [@doi:10.1017/CBO9781107415324.004]
 
+https://portal.brain-map.org/explore/classes
+
+https://github.com/AllenInstitute/nomenclature
 
 This is a collection of resources to be read and parsed.
 
@@ -16,11 +46,6 @@ https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-18-suppl
 Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
 
 In 1957, C.H. Waddington proposed a powerful metaphor for how differentiated cell types emerge from a single, totipotent cell (Waddington 1957). T
-
-
-
-
-Cell type nomenclature for the mammalian brain: Development and application of a systematic, extensible convention
 
 https://www.nature.com/scitable/blog/bio2.0/discovering_new_cell_types_one/
 
