text: Add notes on Human Cell Atlas news on Nature

--- a/content/12.other.md
+++ b/content/12.other.md
@@ -106,3 +106,23 @@ In summary, biology is changing. We have the tools to explore hypothesis-based s
 
 Addresses a bit of the difference between native cell types and cultured cell types.
 
+
+# Template 
+
+## The Human Cell Atlas: from vision to reality
+[@doi:10.1038/550451a]
+### Highlights
+
+As an ambitious project to map all the cells in the human body gets officially under way, Aviv Regev, Sarah Teichmann and colleagues outline some key challenges.
+
+### Comments
+
+# Template 
+
+## Title
+[@doi:]
+### Highlights
+
+
+
+### Comments
