text: Add notes on GEPs and matrix factorization

--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -191,3 +191,12 @@ More ambitious, the Human Cell Atlas (HCA) has proposed a tool to facilitate con
 
 
 ### Comments
+
+## Title
+    \cite{citation
+    
+### Highlights
+
+
+
+### Comments
