--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -707,7 +707,7 @@ The JANZZ ontology is by far the largest, most complicated and most complete occ
 # Template 
 
 ## Title
-[citation]
+[@doi:]
 ### Highlights
 
 
