--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,7 +1,5 @@
-
-Gillespie TH, Tripathy S, Sy FM, Martone ME, Hill SL. 2019. A FAIR Knowledge Model for Classifying Neuronal Types. Neuroinformatics. doi:10.12751/incf.ni2019.0001
-
-Rozenblatt-Rosen O, Stubbington MJT, Regev A, Teichmann SA. 2017. The Human Cell Atlas: from vision to reality. Nature 550:451–453. doi:10.1038/550451a
+Eleven grand challenges in single-cell data science
+Discovering Pathway and Cell Type Signatures in Transcriptomic Compendia with Machine Learning
 
 Computational methods for the integrative analysis of single-cell data 
 
@@ -19,7 +17,6 @@ Haendel MA,  2014. Unification of multi-species vertebrate anatomy ontologies fo
 
 Hodge RD, 2019. Conserved cell types with divergent features in human versus mouse cortex. Nature 573:61–68. doi:10.1038/s41586-019-1506-7
 
-Kotliar D 2019. Identifying gene expression programs of cell-type identity and cellular activity with single-cell RNA-Seq. Elife 8:e43803. doi:10.7554/eLife.43803
 
 Yao Z,  2020b. A taxonomy of transcriptomic cell types across the isocortex and hippocampal formation. bioRxiv. doi:10.1101/2020.03.30.015214
 A community-based transcriptomics classification and nomenclature of neocortical cell types. arXiv [q-bioGN].
