--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -159,8 +159,6 @@ At the time when this work was initiated, there was no published database or com
 ### Comments
 
 
-# Template 
-
 
 ## Unifying single-cell annotations based on the Cell Ontology
 [@doi:10.1101/810234]
@@ -183,6 +181,50 @@ Since OnClass annotated cells even to previously unseen Cell Ontology terms acco
 
 In the state-of-the-art single-cell integration frameworks, datasets from different technologies are aligned in the same low-dimensional space by using mutual nearest neighbors as anchors to connect them. Indeed, our method can be considered to be aligning the Cell Ontology to the gene expression matrix by using known annotations as anchors
 
+
+# Template 
+
+## Identifying gene expression programs of cell-type identity and cellular activity with single-cell RNA-Seq
+[@doi:10.7554/eLife.43803]
+
+### Highlights
+Identifying gene expression programs underlying both cell-type identity and cellular activities (e.g. life-cycle processes, responses to environmental cues) is crucial for understanding the organization of cells and tissues. Although single-cell RNA-Seq (scRNA-Seq) can quantify transcripts in individual cells, each cell’s expression profile may be a mixture of both types of programs, making them difficult to disentangle.
+
+Consensus non-negative matrix factorization (cNMF) accurately refines cell types and identifies both expected (e.g. cell cycle and hypoxia) and novel activity programs.
+
+Individual cells may express multiple GEPs but we only detect cellular expression profiles that reflect their combination, rather than the GEPs themselves.
+
+We group these into two broad classes of expression programs that can be detectable in scRNA-Seq data: 
+(1) GEPs that correspond to the identity of a specific cell type such as hepatocyte or melanocyte (identity programs)
+(2) GEPs that are expressed independently of cell type, in any cell that is carrying out a specific activity such as cell division or immune cell activation (activity programs).
+
+We hypothesized that we could infer activity GEPs directly from variation in single-cell expression
+profiles using matrix factorization.
+
+We refer to the second matrix as a ‘usage’ matrix as it specifies how much each GEP is ‘used’ by each cell in the dataset (Stein-O’Brien et al., 2018) (Figure 1A). Unlike hard clustering, which reduces all cells in a cluster to a single shared GEP, matrix factorization allows cells to express multiple GEPs.
+
+GEPs corre- sponding to different phases of the cell cycle are examples of widespread activity programs and are well-known to confound identity (cell type) program inference in scRNA-Seq data.
+
+We distinguished between identity and activity programs by using the fact that activity programs can occur in multiple diverse cell types while identity programs represent a single-cell type.
+
+Most cells had high usage of just a single GEP, which is consistent with expressing just an identity program.
+
+cNMF was further able to refine cell types by disentangling the contributions of identity and activ-
+ity programs to the gene expression of cells. For example, we found that a cell cluster labeled in Quadrato et al. (2017) as ‘proliferative precursors’, based on high expression of cell-cycle genes, is composed of multiple cell types including immature muscle and dopaminergic neurons.
+
+Identification of activity programs in neurons of the visual cortex.
+
+In this study, we distinguished between cell type (identity) and cell type independent (activity) gene expression programs (GEPs) to motivate our use of matrix factorization, which represents cells as lin- ear combinations of multiple GEPs.
+
+However, we note that some biological programs are not neatly classified as either identity or activity GEPs. For example, cell states reflecting oncogenic transforma- tion, or a cell’s position along a morphological gradient blur the distinction between identity and activity. In addition, stochastic fluctuations in individual transcription factors could result in coordi- nated gene expression changes (Thattai and van Oudenaarden, 2001) and might be better described as a third program category, rather than as an identity or activity GEP. While the identity/ activity distinction might not be appropriate in every case, matrix factorization should, in principle, be appropriate for representing all gene expression states that can be reasonably approximated as a linear mixture of programs.
+
+Beyond simply discovering activity programs, cNMF clarified the underlying cell types in these datasets by disentangling activity and identity programs from the mixed single-cell profiles.
+
+A more fundamental limitation of matrix factorizations, including cNMF, is the built-in assumption
+that cells can be modeled as linear combinations of GEPs.
+
+
+### Comments
 
 # Experimental single-cell research 
 
