text: Add notes on discomfort with too many neuron types

--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -183,11 +183,18 @@ More ambitious, the Human Cell Atlas (HCA) has proposed a tool to facilitate con
 
 ### Comments
 
-## Title
-    \cite{citation
+## Neuronal diversity: Too many cell types for comfort?
+    [@doi:10.1016/s0960-9822(98)70454-3]
+
     
 ### Highlights
+Results that have recently come out of three laboratories will be seen as bad news by the more parsimonious among us: there are too many different types of neurons in the brain! The lowly retina, that highly specialized and very simple model for more interesting parts of the brain (Figure 1), has at least a dozen distinct types of ganglion cell [1] and more than two dozen types of amacrine cell [2].
 
+Perhaps if we look at a more central brain region, such as the hippocampus, we can find some comfort for the lumpers over the splitters. No such comfort comes out of the recent work of Parra et al. [3], who have examined inhibitory cell types in the CA1 region of the hippocampus. 
+
+If we can accept the tiling principle clearly revealed in the retina, which is certainly a reasonable assumption, then there could be at least as many as 350 types of inhibitory neurons — or 700 types if 20% of all hippocampal neurons are inhibitory — a lot more than the 50 thought to be there by Parra et al. [3].
+
+If we take the number of inhibitory hippocampal neuron types to be about 35, then the redundancy in inhibitory cells would be about 10, so that one could anticipate good continued function with a random loss of 10% or even 20% of the population.
 
 
 ### Comments
