text: Add notes on Jure Leskovec paper

--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -182,7 +182,7 @@ Since OnClass annotated cells even to previously unseen Cell Ontology terms acco
 In the state-of-the-art single-cell integration frameworks, datasets from different technologies are aligned in the same low-dimensional space by using mutual nearest neighbors as anchors to connect them. Indeed, our method can be considered to be aligning the Cell Ontology to the gene expression matrix by using known annotations as anchors
 
 
-# Template 
+
 
 ## Identifying gene expression programs of cell-type identity and cellular activity with single-cell RNA-Seq
 [@doi:10.7554/eLife.43803]
@@ -223,6 +223,26 @@ Beyond simply discovering activity programs, cNMF clarified the underlying cell 
 A more fundamental limitation of matrix factorizations, including cNMF, is the built-in assumption
 that cells can be modeled as linear combinations of GEPs.
 
+
+### Comments
+
+# Template 
+
+## Discovering Novel Cell Types across Heterogeneous Single-cell Experiments
+[@doi:10.1101/2020.02.25.960302]
+### Highlights
+
+Here we present MARS, a meta-learning approach for identifying and annotating known as well as novel cell types.
+MARS has a unique ability to discover cell types that have never been seen before and annotate experiments that are yet unannotated.
+MARS ac- curately identifies cell types, even when it has never seen them before. Further, the method automatically generates interpretable names for novel cell types
+
+Ability to generalize to an unannotated experiment and to capture the similarity of cell types across annotated and unannotated experiments.
+
+We find that MARS aligns all cell types except the set of natural killer (NK) cells. NK cells change their position at every time point (Fig. 1c), indicating the existence of transcriptional changes.
+
+MARS relies on the cell-type landmarks in the annotated experiments to probabilistically define cell type based on its region in the low-dimensional embed- ding space. Probabilities are assigned to landmarks in proportion to their probability density under Gaussian centered at a target unannotated cell type (Methods)
+
+--> No discussion about naming!
 
 ### Comments
 
@@ -315,6 +335,76 @@ Nonetheless, some DC/monocyte subtypes were likely missed because they do not ex
 
 Healthy donors were recruited from the Boston-based PhenoGenetic project, a resource of healthysubjectsthatare recontactablebygeno- type (57), and the Newcastle community. Individ- uals were excluded if they had a history ofcancer, allergies, inflammatory disease, autoimmune dis- ease, chronic metabolic disorders, or infectious disorders. All healthy donors were nonsmokers, had a normal BMI and normal blood pressure, and were between 25 and 40 years of age.
 
+
+
+
+### Comments
+
+
+
+
+## Single-cell sequencing of the human midbrain reveals glial activation and a neuronal state specific to Parkinson’s disease 
+[@doi:10.1101/2020.09.28.20202812]
+### Highlights
+
+profiled >41,000 single-nuclei transcriptomes of postmortem midbrain tissue from 6 idiopathic PD (IPD) patients and 5 matched controls.
+
+IPD-microglia revealed a specific pro-inflammatory trajectory. Finally, we discovered a neuronal cell cluster exclusively present in IPD midbrains characterized by CADPS2 overexpression and a high proportion of cycling cells.
+
+We performed snRNA-seq of postmortem adult human midbrain tissue of IPD patients and age-matched healthy controls.
+
+Postmortem intervals, IPD ~22, and controls ~16 hours
+
+We found that this overall cluster structure was mostly driven by cell-type identity and the inter-sample variability
+
+Using this corrected PCA embedding and the unsupervised and network-based Louvain clustering approach, we found that the human midbrain comprises 12 major cell types.
+
+- Oligodendrocytes, the most abundant cell-type in the midbrain ( Fig. 1F ), are characterized by the expression of MOBP 10
+- oligodendrocyte precursors cells (OPCs) highly express VCAN 11
+-  Expression of AQP4 is characteristic of astrocytes 12
+- FOXJ1 of ependymal cells 13
+- CD74 in microglia 
+- CLDN5 in endothelial cells 15 , 16
+- PDGFRB in pericytes 
+- excitatory ( SLC17A6 ) 
+- inhibitory ( GAD2 ) 
+- GABAergic ( GAD2 / GRIK1 ) 
+- dopaminergic neurons( TH )
+
+We also discovered a neuronal cluster of 120 cells, which we could not annotate, characterized by high expression of CADPS2 (CADPS2 high
+cells) ( Fig. 1E-F, fig. S1C ). These cells almost exclusively originated from IPD patients (IPD, 98.4%; control, 1.6%) (Fig. 1G)
+
+We labeled microglia and astrocytes with antibodies against their marker proteins IBA1 and GFAP, respectively.
+
+. We labeled microglia and astrocytes with antibodies against their marker proteins IBA1 and GFAP, respectively
+
+To validate DaN degeneration in the IPD tissue with an independent approach, we quantified the area of MAP2+/TH+/NM+ and MAP2+/TH-/NM+ neurons.
+
+We recovered the astrocyte activation trajectory based on the main cell types comprising VAV3 high, LRRC4C high , and CD44/S100A6 high subpopulations
+
+We then focused on deciphering the identity of the CADPS2 high cells, which were almost exclusively detected
+in the IPD patients ( Fig. 4A ). This cell population pseudo-bulk-transcriptome clusters together with the neuronal cell types, excitatory, inhibitory, GABAergic, and DaNs ( fig. S1I ). In accordance with this global transcriptome similarity, CADPS2 high
+cells positively express the neuronal marker genes MAP2 and SCN2A
+( Fig. 4B ). Performing immunofluorescence labeling with antibodies for CADPS2, MAP2, and TH, we confirmed the existence of a neuronal cell population with an IPD-specific increase of CADPS2 expression in the SN ( Fig. 4C, E )
+
+when we previously applied scRNA-seq to
+.
+midbrain organoids, the detected number of TH-positive neurons was well below the actual DaN count
+
+--> what is, then, a DaN?
+
+Finally, we discovered a new disease-specific cell state that is defined by translational similarity to midbrain DaNs but with low TH levels and high CADPS2 expression.
+
+Immunofluorescence analysis revealed that CADPS2 high neurons are localized to the SN and that they harbour neuromelanin deposits.
+
+In addition to high levels of CADPS2 , the IPD-specific neuronal population was characterized by elevated TIAM1 expression.
+
+We discovered a novel neuronal cell state that was almost exclusively identified in IPD midbrain tissue.
+
+The top marker genes were used to assign cell-type annotations manually for each cell cluster. We compared the cell types by correlating their pseudo bulk profiles.
+
+
+### Comments
 
 
 
