--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -246,6 +246,50 @@ MARS relies on the cell-type landmarks in the annotated experiments to probabili
 
 ### Comments
 
+
+
+
+## Eleven grand challenges in single-cell data science
+[doi:10.1186/s13059-020-1926-6]
+
+### Highlights
+
+The opportunities arising from single-cell sequencing (sc-seq) are enormous: only now is it possible to re-evaluate hypotheses about differences between pre- defined sample groups at the single-cell level—no matter if such sample groups are disease subtypes, treatment groups, or simply morphologically distinct cell types.
+
+When drawing maps of cell types and states, it is important that they:
+- Have a structure that recapitulates both tissue development and tissue organization; 
+- Account for continuous cell states in addition to discrete cell types (i.e., reflecting cell state trajectories within cell types and smooth transitions between cell types, as observed in tissue generation); 
+- Allow for choosing the level of resolution flexibly (i.e., the map should possibly support zoom-type operations, to let the researcher choose the desired level of granularity with respect to cell types and states conveniently, ranging from whole organisms via tissues to cell populations and cellular subtypes); 
+- Include biological and functional annotation wherever available and helpful in the intended functional context
+
+The increase in the number of single cells analyzed per experiment translates into more data points being gener- ated, requiring methods to scale rapidly.
+
+The vast majority of differential expression detection methods assume that the groups of cells to be compared are known in advance (e.g., experimental conditions or cell types). However, current analysis pipelines typically rely on clustering or cell type assignment to identify such groups.
+
+Classifying cells into cell types or states is essential for many secondary analyses. As an example, consider study- ing and classifying how expression within a cell type varies across different biological conditions.
+
+To put the results of such studies on a map, reliable reference systems with a res- olution down to cell states are required—and depending on the research question at hand, even intermediate transition states might be of interest (see “Varying levels of resolution”).
+
+Challenge X: Integration of single-cell data across samples, experiments, and types of measurement.
+
+Depending on the actual research question, such experiments can be different time points, tissues, or organisms. For their integration, we need flexible but rigorous statistical and computational frameworks.
+
+All of these approaches are affected by
+- the varying resolution lev- els that are of interest depending on the research question at hand
+- the uncertainty of any measurements and how to quantify them for and during the analyses 
+- the scaling of single-cell methodology to more cells and more features measured at once 
+
+Batch effects are further aggravated when integrating across multiple experiments, possibly run in differ- ent experimental centers with similar but distinct setups.
+
+Even if standards have been successfully established and known batches accounted for, additional validation of, for exam- ple, assignments of cells to types and states may be required. Eventually, an increase in generality will sup- port the construction of reference systems, such as a cell atlas, the existence of which can support decisive speed- ups when classifying cells or cell states in subsequent experiments.
+
+An exit strategy to this problem is to analyze a population of cells that is homogeneous in terms of some cell type or state, tak- ing different measurement types in different single cells. After collecting different measurement types in different single cells, one needs to combine the data in a way that is biologically meaningful.
+
+
+
+
+### Comments
+
 # Experimental single-cell research 
 
 ## Single-cell RNA-seq reveals new types ofhuman blood dendritic cells, monocytes, and progenitors
