text: Add notes on prime-number identifiers

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,6 +1,73 @@
+A community-based transcriptomics classification and nomenclature of neocortical cell types
+
+Evolution of Cellular Differentiation: From Hypotheses to Models
+
+Theory of cell fate Michael J. Casey  Patrick S. Stumpf  Ben D. MacArthur
+
+CELLPEDIA: a repository for human cell information for cell studies and differentiation analyses
+
+CellMarker: a manually curated resource of cell markers in human and mouse 
+Xinxin Zhang, Yujia Lan, Jinyuan Xu, Fei Quan, Erjie Zhao, Chunyu Deng, Tao Luo, Liwen Xu, Gaoming Liao, Min Yan, Yanyan Ping, Feng Li, Aiai Shi, Jing Bai, Tingting Zhao, Xia Li, Yun Xiao
+
+Implications of Epigenetic Variability within a Cell Population for “Cell Type” Classification
+
+The evolving concept of cell identity in the single cell era
+Samantha A. Morris
+
+Reproducibility of Flow Cytometry Through Standardization: Opportunities and Challenges Tomas Kalina
+
+Models of global gene expression define major domains of cell type and tissue identity 
 
 
-Eleven grand challenges in single-cell data science
+Defining cellular identity through network biology.
+
+Genomic and molecular control of cell type and cell type conversions
+
+SC2disease: a manually curated database of single-cell transcriptome for human diseases
+
+Phylogenetic analysis of cell types using histone modifications
+
+Study of cell differentiation by phylogenetic analysis using histone modification data
+
+Identifying cell types to interpret scRNA-seq data: how, why and more possibilities
+
+Integrating resident memory into T cell differentiation models
+
+Visual cue-related activity of cells in the medial entorhinal cortex during navigation in virtual reality
+
+Inferring cell type innovations by phylogenetic methods-concepts, methods, and limitations Koryu Kin 1 2
+
+Genomic and molecular control of cell type and cell type conversions
+
+Cell Atlas of The Human Fovea and Peripheral Retina
+
+Geometry of the Gene Expression Space of Individual Cells
+
+Cell-type deconvolution from DNA methylation: a review of recent applications
+
+Cell-type-specific programs for activity-regulated gene expression
+
+Circular RNA expression in human hematopoietic cells is widespread and cell-type specific
+
+scReClassify: post hoc cell type classification of single-cell rNA-seq data
+
+TOAST: improving reference-free cell composition estimation by cross-cell type differential analysis
+
+Cell-type deconvolution in epigenome-wide association studies: a review and recommendations
+
+The selection and function of cell type-specific enhancers.
+
+Cell-type-resolved alternative splicing patterns in mouse liver
+
+https://pubmed.ncbi.nlm.nih.gov/6574104/
+
+J Cell Biol. 1969 Oct 1; 43(1): 32–39.
+doi: 10.1083/jcb.43.1.32
+PMCID: PMC2107835
+PMID: 5824067
+A SIMPLE MODEL OF A STEADY STATE DIFFERENTIATING CELL SYSTEM
+S. I. Rubinow
+
 Discovering Pathway and Cell Type Signatures in Transcriptomic Compendia with Machine Learning
 
 Computational methods for the integrative analysis of single-cell data 
