--- a/content/05.systems.md
+++ b/content/05.systems.md
@@ -41,3 +41,42 @@ In general, they present a tree-like structure with supra classifications. It is
 
 Talks about a periodic table of C. elegans, but does not build it. 
 
+
+
+
+## Universal Cell Type Identifier Based on Number Theory
+[@doi:10.1002/cyto.a.23346]
+### Highlights
+
+The advent of high multiplexing technologies increased the complexity of the classifica- tion process and new tools are needed to support the organization of this knowledge. I propose a classification based on both prime numbers and the fundamental theorem of arithmetic.
+
+CELL types are classified by the presence or absence of specific markers expressed intracellularly or at the cell surface.
+
+Cells are additionally classified in hierarchical struc- tures where each level represents cells defined by the addition of successive layer of markers. These hierarchical structures may reflect haematopoiesis and, therefore, inform about the origin and differentiation pathway of the cells. Moreover, cell populations may be identified with different degree of resolution, that is, by an increasing number of markers all specific for a selected cell type.
+
+The marker is a quite well-defined concept: a given antibody recognizes a protein that is usually translated by a known RNA and transcribed by a known gene. On the contrary, the cell population is a vague concept.
+
+The nonprime number 17662215891311 is factorized as 19 3 23 3 151 3 277 3 9832 thus univocally defining a population of regulatory T-cells characterized as CD31, CD41, CD251, CD451, and CD1272.
+
+Nevertheless, both databases and ontologies are created subjectively without a systematic approach and rely on critical literature reading by expert in the field. Both systems require a clear definition of a cell population that is usually a name given by experts in the field.
+
+Each marker listed in the “CD Nomenclature 2015” was associated to a prime number according to a one to one relationship.
+
+Since sometimes cell types are defined as negative for certain markers, I propose to integrate this information by simply squaring the prime associated to the negative marker.
+
+A more detailed definition could be achieved for population defined as expressing a marker at a “medium”/ “low” level by simply cubing the prime.
+
+In any case, a unique natural number (UNN) will univocally define the population.
+
+The PPS assures unique name assumption (UNA) on the basis of a list of markers associated to a list of prime numbers.
+
+Nevertheless, I hope this manuscript will inspire the single cell community toward a standardization of cell type nomenclature based on the number theory.
+
+### Comments
+## Title
+[@doi:]
+### Highlights
+
+
+
+### Comments
