--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,10 +1,32 @@
+
+
+Human Cell Atlas and cell-type authentication for regenerative medicine
+https://www.nature.com/articles/s12276-020-0421-1
+
+scMontage: Fast and Robust Gene Expression Similarity Search  for Massive Single-cell Data
+https://www.biorxiv.org/content/10.1101/2020.08.30.271395v1.full.pdf
+
+https://stemcellinformatics.org/
+
+Sakurai K, Fujibuchi W.
+Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine.
+
+Kurtz A, Seltmann S, Bairoch A, Bittner MS, Bruce K, Capes-Davis A, Clarke L, Crook JM, Daheron L, Dewender J, Faulconbridge A, Fujibuchi W, Gutteridge A, Hei DJ, Kim YO, Kim JH, Kokocinski AK, Lekschas F, Lomax GP, Loring JF, Ludwig T, Mah N, Matsui T, Müller R, Parkinson H, Sheldon M, Smith K, Stachelscheid H, Stacey G, Streeter I, Veiga A, Xu RH.
+A Standard Nomenclature for Referencing and Authentication of Pluripotent Stem Cells.
+
+Sakurai K, Fujibuchi W.
+Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine.
+
+Genomics and Computational Biology 3(2):e50, 2017.
+
+Fujibuchi,W., Kiseleva,L., Taniguchi,T. et al. (2005) Development of cell knowledge base and prediction of cell types and characteristics by gene expression profiles. IPSJ SIG Technical Reports 2005-BIO-2, 33–37 (in Japanese).
+14.
+
 A community-based transcriptomics classification and nomenclature of neocortical cell types
 
 Evolution of Cellular Differentiation: From Hypotheses to Models
 
 Theory of cell fate Michael J. Casey  Patrick S. Stumpf  Ben D. MacArthur
-
-CELLPEDIA: a repository for human cell information for cell studies and differentiation analyses
 
 CellMarker: a manually curated resource of cell markers in human and mouse 
 Xinxin Zhang, Yujia Lan, Jinyuan Xu, Fei Quan, Erjie Zhao, Chunyu Deng, Tao Luo, Liwen Xu, Gaoming Liao, Min Yan, Yanyan Ping, Feng Li, Aiai Shi, Jing Bai, Tingting Zhao, Xia Li, Yun Xiao
