--- a/content/12.other.md
+++ b/content/12.other.md
@@ -133,6 +133,31 @@ Descriptors such as ‘cell type’ and ‘cell state’ can be difficult to def
 
 # Template 
 
+## CELLPEDIA: a repository for human cell information for cell studies and differentiation analyses
+[@doi:10.1093/database/bar046]
+### Highlights
+
+CELLPEDIA features 
+- (i) its own cell classification scheme, in which whole human cells are classified by their physical locations in addition to conventional taxonomy; and 
+- (ii) cell differentiation pathways compiled from biomedical textbooks and journal papers. Currently, human differentiated cells and stem cells are classified into 2260 and 66 cell taxonomy keys, respectively, from which 934 parent–child relationships reported in cell differentiation or transdiffer- entiation pathways are retrievable.
+
+Many histology and molecular biology textbooks state that there are ?200 types of cells in the adult human body (2). However, this classical observa- tion is mainly based on the morphological or histological perspective, and no cell classification system based on gene expression levels has yet been systematically established.
+
+Inspired by the importance of cell studies early on, we developed a gene expression profile data search system called ‘CellMontage’ in 2004, where we also provided a draft version of a cell catalogue (13).
+
+The latest version of CELLPEDIA consists of two major cell categories: ‘differentiated cell’ and ‘stem cell’. The ‘differ- entiated cell’ category contains information of fully differ- entiated or mature cells that represent specific functions or characteristics, whereas the ‘stem cell’ category contains information of undifferentiated or immature cells, such as progenitor or multipotent stem cells.
+
+In typical textbooks, cells with equivalent or similar func- tions are given the same name even if they exist in different physical locations. For instance, ‘goblet cells’ are found in the nose, lung and small and large intestines.
+
+CELLPEDIA defines its own enhanced cell taxonomy for physically distinct cells, establishing a hierarchical structure of up to eight levels from organs (or tissues) to cells. It presents a combination of both conventional cell taxonomy and their physical locations (Figure 1a).
+
+To avoid con- fusion, we have added a ‘Population’ category in the gene expression data table to provide information of the data resource. ‘Heterogeneous’ means that the gene expression data are measured from a heterogeneous cell population
+
+--> Which population is not heterogeneous??
+### Comments
+ It became extended to https://stemcellinformatics.org/
+# Template 
+
 ## Title
 [@doi:]
 ### Highlights
