text: Notes on cell identity w/ network biology

--- a/content/09.opinion.md
+++ b/content/09.opinion.md
@@ -271,3 +271,21 @@ As the tools to evaluate cellular heterogeneity continue to evolve, so too will 
 I disagree that functions remain the same throughout the division process.
 Many interesting views. Arbitrary categories may be useful, but should not be mixed with cell types.
 Again, tree view of cell types
+
+
+
+# Template 
+
+## Defining cellular identity through network biology
+[@pmid:25485572]
+### Highlights
+related question remains poorly defined: what is a ‘cell type’? In other words, by what criteria should we categorize cells into classes?
+
+Answering this question is not a mere academic exercise but has deep implications for both developmental biology and for engineering cell fate.
+
+Cells are typically categorized by their physiologic function: red blood cells transport oxygen and motor neurons transmit signals between skeletal muscle and the central nervous system.
+
+Gene regulatory networks (GRNs) determine both the steady-state transcriptional pro- file of a cell and its response to most per- turbations (e.g., stress, lack or surfeit of nutrients, disease, age, etc.)
+As the persis- tence of the starting cell type GRN was commonly found across cell engineering paradigms, learning how to overcome this barrier will be crucial.
+
+### Comments
