text: Add notes on Fujibuchi 2020

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,4 +1,5 @@
 
+Abdelaal, T. et al. A comparison of automatic cell identification methods for single-cell RNA sequencing data. Genome Biol. 20, 194 (2019)
 
 Human Cell Atlas and cell-type authentication for regenerative medicine
 https://www.nature.com/articles/s12276-020-0421-1
@@ -11,13 +12,15 @@ https://stemcellinformatics.org/
 Sakurai K, Fujibuchi W.
 Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine.
 
+Luecken, M. D. & Theis, F. J. Current best practices in single-cell RNA-seq analysis: a tutorial. Mol. Syst. Biol. 15, e8746 (2019)
+
+Zeng, H. & Sanes,J.R.Neuronalcell-type classification: challenges, oppor- tunities and the path forward. Nat. Rev. Neurosci. 18,530–546 (2017).
+
 Kurtz A, Seltmann S, Bairoch A, Bittner MS, Bruce K, Capes-Davis A, Clarke L, Crook JM, Daheron L, Dewender J, Faulconbridge A, Fujibuchi W, Gutteridge A, Hei DJ, Kim YO, Kim JH, Kokocinski AK, Lekschas F, Lomax GP, Loring JF, Ludwig T, Mah N, Matsui T, Müller R, Parkinson H, Sheldon M, Smith K, Stachelscheid H, Stacey G, Streeter I, Veiga A, Xu RH.
 A Standard Nomenclature for Referencing and Authentication of Pluripotent Stem Cells.
 
 Sakurai K, Fujibuchi W.
 Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine.
-
-Genomics and Computational Biology 3(2):e50, 2017.
 
 Fujibuchi,W., Kiseleva,L., Taniguchi,T. et al. (2005) Development of cell knowledge base and prediction of cell types and characteristics by gene expression profiles. IPSJ SIG Technical Reports 2005-BIO-2, 33–37 (in Japanese).
 14.
@@ -40,8 +43,6 @@ Reproducibility of Flow Cytometry Through Standardization: Opportunities and Cha
 
 Models of global gene expression define major domains of cell type and tissue identity 
 
-
-Defining cellular identity through network biology.
 
 Genomic and molecular control of cell type and cell type conversions
 
