--- a/content/12.other.md
+++ b/content/12.other.md
@@ -156,7 +156,49 @@ To avoid con- fusion, we have added a ‘Population’ category in the gene expr
 --> Which population is not heterogeneous??
 ### Comments
  It became extended to https://stemcellinformatics.org/
-# Template 
+
+
+## Human Cell Atlas and cell-type authentication for regenerative medicine
+[@doi:10.1038/s12276-020-0421-1]
+### Highlights
+The objective of this review is to survey the current progress in the field of cell-type identification, starting with the Human Cell Atlas project, which aims to sequence every cell in the human body, to molecular marker databases for individual cell types and other sources that address cell-type identification for regenerative medicine based on cell data guidelines.
+
+The challenge for the HCA project is to create a universal classification system for all of these projects. Adding to this challenge are regional HCAs, such as HCA Asia, that focus on regional diseases.
+
+To expedite methods for cell-type identification, the
+HCA project has multiple committees and working groups that coordinate the efforts of independent research groups and unify the results of scRNA-seq. Typically, the research groups perform all the data preparation, acqui- sition, and analysis, and the HCA committees provide the general framework, guidelines, and data repository space
+
+several cell marker databases are available?
+
+- Labome provides a list of 226 markers for epithelial, dendritic, glial, bone marrow, natural killer, and other cell types.
+
+- CellFinder was the first database website of molecular markers and now features information on 3394 cell types, 50,951 cell lines, and 553,905 protein expres- sions
+
+- CellMarker44, which cur- rently features 13,605 cell markers for 467 cell types in 158 human tissue and 9148 cell markers for 389 cell types in 81 mouse tissues
+
+- At approximately the same time, PanglaoDB was published45, providing data on 8230 markers collected from human and mouse scRNA-seq experiments.
+
+In some cases, heterogeneity, such as that during states of immaturity or senescence, blurs discrete states, leaving a continuous spectrum that greatly complicates cell-type classification (Fig. 1). In such cases, cell types may seem to have hundreds of variants
+
+To help consolidate the many opinions about cell-type
+classification and provide data-related guidelines for cell- type authentication for clinical application, the Interna- tional Cell Type Authentication Committee (ICTAC) was created (https://cell-type.org/). The ICTAC was launched to establish criteria and processes for defining, deter- mining, and authenticating all human cell types. 
+
+The ICTAC proposed the concept of reference cell
+types (RCTs), which are defined by an integrative examination of core properties (species, physiological system, source age, and markers) and additional attri- butes (functions including potency, morphology, devel- opmental origin, omics, and environmental conditions) and are constantly updated by experts of relevant tissues and organs.
+
+Advances in microscopy, histology, and, now, omics technologies have made it clear that the list of cell types is much longer than originally imagined.
+
+### Comments
+
+
+
+
+
+
+
+
+
+
 
 ## Title
 [@doi:]
