--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -250,7 +250,7 @@ MARS relies on the cell-type landmarks in the annotated experiments to probabili
 
 
 ## Eleven grand challenges in single-cell data science
-[doi:10.1186/s13059-020-1926-6]
+[@doi:10.1186/s13059-020-1926-6]
 
 ### Highlights
 
@@ -288,6 +288,28 @@ An exit strategy to this problem is to analyze a population of cells that is hom
 
 
 
+## A comparison of automatic cell identification methods for single-cell RNA sequencing data
+[@doi:10.1186/s13059-019-1795-z]
+### Highlights
+Here, we benchmarked 22 classification methods that automatically assign cell identities including single- cell-specific and general-purpose classifiers. The performance of the methods is evaluated using 27 publicly available single-cell RNA sequencing datasets of different sizes, technologies, species, and levels of complexity
+
+We provide a Snakemake workflow to facilitate the benchmarking and to support the extension of new methods and new datasets.
+
+manual annotations, which are often not based on stan- dardized ontologies of cell labels, are not reproducible across different experiments within and across research groups.
+
+Here, we benchmarked 22 classification methods to automatically assign cell identities including single-cell- specific and general-purpose classifiers.
+
+Classifiers were di- vided into two categories:
+ (1) supervised methods which require a training dataset labeled with the corresponding cell populations in order to train the classifier or
+ (2) prior-knowledge methods, for which either a marker gene file is required as an input or a pretrained classifier for specific cell populations is provided
+
+ PanglaoDB [39] and CellMarker [40]) often provide different markers for the same population. For example, CellMarker provides 33 marker genes for B cells, while PanglaoDB provides 110 markers, with only 11 marker genes overlap between the two databases.
+
+ PanglaoDB [39] and CellMarker [40]) often provide different markers for the same population. For example, CellMarker provides 33 marker genes for B cells, while PanglaoDB provides 110 markers, with only 11 marker genes overlap between the two databases.
+
+ The cell population annotation for all datasets was provided with the data, except the Zheng 68K dataset, for which we obtained the cell population annotation from https://github.com/10XGenomics/single-cell-3prime-paper/ tree/master/pbmc68k_analysis. These annotations were used as a “ground truth” during the evaluation of the cell population predictions obtained from the classifica- tion methods.
+
+ 
 ### Comments
 
 # Experimental single-cell research 
