text: Add notes on scMontage

--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -226,7 +226,6 @@ that cells can be modeled as linear combinations of GEPs.
 
 ### Comments
 
-# Template 
 
 ## Discovering Novel Cell Types across Heterogeneous Single-cell Experiments
 [@doi:10.1101/2020.02.25.960302]
@@ -311,6 +310,24 @@ Classifiers were di- vided into two categories:
 
  
 ### Comments
+
+# Template 
+
+## scMontage: Fast and Robust Gene Expression Similarity Search 2 for Massive Single-cell Data
+[@doi:10.1101/2020.08.30.271395]
+### Highlights
+
+renovated gene expression similarity search server, which 46 is developed for analyzing massive-scale scRNA-seq data, based on the SHOGoiN human cell type 47 database
+
+After selecting the database by specifying the organism and the platform, the user can limit the genes for calculation to particular types according to Gene Ontology [7]
+
+The scMontage basically runs on Spearman's rank correlation coefficient as a similarity metric of gene  expression profiles.
+
+The scMontage server currently provides 5,035 single-cell transcriptome data (1,424 human and 3,611 mouse cell samples on 23 August 2018) whose cell types are available by original submitters.
+
+
+### Comments
+https://scmontage.stemcellinformatics.org
 
 # Experimental single-cell research 
 
