text: Add notes on shogoin db

--- a/content/12.other.md
+++ b/content/12.other.md
@@ -200,6 +200,45 @@ Advances in microscopy, histology, and, now, omics technologies have made it cle
 
 
 
+## SHOGoiN Cell Database
+[@url:https://stemcellinformatics.org/]
+### Highlights
+
+On the integration page for B cell, the user can obtain various types of data associated to B cell. For example,
+
+- SHOGoiN Cell Taxonomy provides general profile information associated with B cells such as germ layer, differentiation status, source age, anatomical location, and cell type.
+- SHOGoiN Cell Transcriptome provides single-cell transcriptome assay data and metadata.
+- SHOGoiN Cell Conversion provides literature-curated cell differentiation and transdifferentiation information.
+- SHOGoiN Marker provides literature-curated cell type marker information (marker molecule name, molecular type; gene, protein etc., subcellular location, link to UniProt, gene ID).
+- Image provides cell images clipped from tissue images and morphological analysis data.
+- Orthologous Cell provides literature-curated information about orthologous cell types among different species.
+
+: What is the difference of SHOGoiN with other databases?
+A: Our features are as follows.
+    1. The misidentification of cell types can be prevented by using the 5 factor ID code.
+    2. The ID code integrates five pieces of information: a) cell lineage map, b) transcriptome/methylome analysis information, c) cell conversion information, d) cell marker information and e) cell/tissue image information.
+    3. It is possible to integrate information quickly from other databases (Cellfinder, LifeMap Discovery™ and so on) into SHOGoiN by using the ID code.
+
+Q: What does the term "SHOGoiN Cell ID" mean?
+    A: SHOGoiN Cell ID consists of Anatomy ID (22 digits) and Cell Type ID (3 digits).
+
+
+(query for neuron)
+        Cell Type Name                                                Cell Type Subclass          SHOGoiN Cell Id
+    33	Central Nervous System Cell:neuron	                         Cholinergic Neuron	       1010000000000000000000-189	Neural (brain)
+    46	Central Nervous System Cell:neuron	                         Dopaminergic Neuron	   1010000000000000000000-189	Neural (brain)
+    105	Central Nervous System Cell:neuron	                         	                       1010201030000000000000-189	Cerebral Cortex, Temporal Lobe
+    109	Central Nervous System Cell:neuron	                         	                       1010201030000000000000-189	Cerebral Cortex, Temporal Lobe
+(query for astrocyte)                                
+     4	Central Nervous System Cell:Astrocyte                         		                   1010201030000000000000-018	Cerebral Cortex, Temporal Lobe
+     8  Central Nervous System Cell:Astrocyte                         	 Mature	               1010201030000000000000-018	Cerebral Cortex, Temporal Lobe
+    46	Central Nervous System Cell:Astrocyte Precursor  Cell                   	           1010201030000000000000-910	Cerebral Cortex, Temporal Lobe
+    49	Central Nervous System Cell:Astrocyte                         		                   7110002000100000000000-018	Forebrain
+             
+--> Cell IDs are not unique! But they change for some cell types and, always change across tissues.
+### Comments
+
+
 ## Title
 [@doi:]
 ### Highlights
