--- a/content/12.other.md
+++ b/content/12.other.md
@@ -239,6 +239,40 @@ Q: What does the term "SHOGoiN Cell ID" mean?
 ### Comments
 
 
+## Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine
+
+[@doi:10.18547/gcb.2017.vol3.iss2.e50]
+### Highlights
+
+To maximize a value placed on the information in stem cell and derivative cell research, we have proposed reporting guidelines for describing cellular assay data to pursue the facilitation of practical regenerative medicine named Minimum Information About a Cellular Assay for Regenerative Medicine (MIACARM).
+
+Although the number of produced cellular data has been multiplied dramatically, it is still hard to fully utilize them due to a lack of standardization of cellular assay reporting formats. It consequently causes difficulties in experimental reproducibility and data exchange among cell banks and laboratories.
+
+MIACARM-I has items to describe omics assays in basic research using human cells, and MIACARM-II has items for practical regenerative medicine which include items for quality and safety of cells.
+
+Basic structure of MIACARM was created by reorganizing the existing Minimum Information About a Cellular Assay (MIACA) [5]
+- Assay
+Assay design summary 
+Assay type
+
+- Source cell
+Cell identification
+Cell taxonomy 
+Anatomical location 
+Stem cell production 
+Stem cell quality control 
+
+- Experimental technology
+Sample preparation 
+Detection technology
+
+- Data
+Data type
+Data processing
+
+### Comments
+http://miaca.sourceforge.net/
+
 ## Title
 [@doi:]
 ### Highlights
