text: Add notes on Luecken single-cell guide

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,10 +1,6 @@
+Wagner A, Regev A, Yosef N (2016) Revealing the vectors of cellular identity with single-cell genomics. Nat Biotechnol 34: 1145 – 1160
 
-https://stemcellinformatics.org/
-
-Sakurai K, Fujibuchi W.
-Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine.
-
-Luecken, M. D. & Theis, F. J. Current best practices in single-cell RNA-seq analysis: a tutorial. Mol. Syst. Biol. 15, e8746 (2019)
+Tabula Muris Consortium et al, 2018
 
 Zeng, H. & Sanes,J.R.Neuronalcell-type classification: challenges, oppor- tunities and the path forward. Nat. Rev. Neurosci. 18,530–546 (2017).
 
@@ -34,7 +30,6 @@ Samantha A. Morris
 Reproducibility of Flow Cytometry Through Standardization: Opportunities and Challenges Tomas Kalina
 
 Models of global gene expression define major domains of cell type and tissue identity 
-
 
 Genomic and molecular control of cell type and cell type conversions
 
