text: Add notes about SPADE

--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -601,6 +601,43 @@ The top marker genes were used to assign cell-type annotations manually for each
 
 # Template 
 
+## Cell types in the mouse cortex and hippocampus revealed by single-cell RNA-seq
+[@doi:10.1126/science.aaa1934]
+### Highlights
+
+Here, we have used large-scale  RNA-seq to classify cells in the mouse somatosensory cortex and hippocampal CA1 region. We found 47 molecularly distinct subclasses,
+on SPIN (13), which revealed comprising all known major cell types in the cortex
+
+S1 pyramidal cells were marked by Tbr1
+oligodendrocytes by Hapln2 (and so on)
+
+Every subclass was detected in multiple mice (fig. S1K), arguing that cell identity was preserved across these genetically outbred (CD-1) animals.
+
+We identified seven subclasses of S1 pyramidal cells (Fig.2A and figs. S6A and S7), which were largely layer-specific
+
+Astrocytes formed two subclasses (Fig. 3A and fig. S9A), distinguished by differential expression of Gfap (type 1) and Mfge8 (type 2). 
+
+We identified two types of immune cells: microglia (the tissue-resident macrophages of the brain) and perivascular macrophages.
+Although closely related, these cell types have distinct developmental origin (19).
+
+Both expressed brain macrophage markers Aif1 and Cx3cr1, while perivascular macrophages were distinguished by expression of Mrc1 and Lyve1, characteristic of pro-angiogenic perivascular type 2 macrophages (20). 
+
+Immunohistochemistry for the corresponding proteins confirmed that microglia (AIF1+/LYVE1-/MRC1-) had a classical, ramified morphology and were lo-
+cated throughout the cortex (Fig. 3, D and E). 
+
+In contrast, perivascular macrophages (AIF+/LYVE1+/MRC1+) were located only along vessels and showed an ameboid morphology.
+
+Across the full set of cell types, transcription factors formed a complex, layered regu- latory code, suggesting a plausible mechanism for
+the maintenance of adult differentiated cell types.
+
+--> By using an explicit definition, you can really study type maintenance.
+
+
+### Comments
+
+
+# Template 
+
 ## Title
 [citation]
 ### Highlights
